fixed blocked user but needs bug fixes